# agentic-regulated-decisioning

./: .env.example  .gitignore  Makefile  README.md  demo.py  docker-compose.kafka.yml  docker-compose.yml  pyproject.toml  sitecustomize.py  structlog.py
.github/workflows/: ci.yml
api/: main.py
api/routers/: analytics.py  audit.py  config.py  health.py  intake.py  playbook.py  registry.py  streams.py  workbench.py
core/: config.py  exceptions.py  playbook_schema.py  schemas.py
docs/: DEVELOPER_GUIDE.md  regulated_decisioning_architecture.html
domains/: base.py  registry.py
domains/healthcare/: adapter.py  agents.py
domains/insurance/: adapter.py  agents.py  mcp_config.yaml
domains/lending/: adapter.py  agents.py
domains/wealth/: adapter.py  agents.py
grafana/dashboards/: regulated_decisioning.json
platform/: __init__.py
platform/data/: analytics.py  migrations.py  store.py  (+2 more)
scripts/: live_backend_smoke.py  smoke_app_domain_models.py  train_local_model.py  ui_smoke_cdp.py
seed/: mock_fixtures.py  seed_all.py  seed_models.py
tests/: conftest.py  test_analytics.py  test_api.py  test_api_contracts.py  test_domain_agents.py  test_domain_protocol.py  test_event_stream.py  test_governance_engine.py  test_live_services.py  test_llm_provider.py  test_mcp_assembler.py  test_mcp_server.py  test_naming_conventions.py  test_observability.py  test_playbook_api.py  test_playbook_executor.py  test_playbook_schema.py  test_real_mcp_connectors.py  test_schemas.py  test_train_local_model.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
(+82 files in other folders)
