[project]
name = "agentic-regulated-decisioning"
version = "0.1.0"
description = "Agentic decisioning platform for regulated industries"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic>=2",
    "pydantic-settings",
    "langgraph",
    "litellm",
    "redis",
    "asyncpg",
    "sqlalchemy[asyncio]",
    "mlflow",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-fastapi",
    "prometheus-client",
    "mcp",
    "python-dotenv",
    "pyyaml",
    "structlog",
    "tenacity",
    "rich",
    "scikit-learn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "httpx",
    "fakeredis",
]

[project.scripts]
regulated-decisioning-api = "api.main:app"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disable_error_code = ["import-untyped", "var-annotated"]
strict = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=core --cov=domains --cov=platform --cov=api --cov-report=term-missing --cov-fail-under=80"
